switch to ssr stream

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="root"><!--app-html--></div>
+    <!-- NOTE: This needs to be included for Vite to consider it part of the app tree and create a bundle in production. -->
     <script type="module" src="/src/entry-client.tsx"></script>
   </body>
 </html>
